--- a/index.html
+++ b/index.html
@@ -3,119 +3,174 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dapson</title>
+    <title>Bootstrap demo</title>
+    <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- styles -->
     <link rel="stylesheet" href="style.css">
-    
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&family=Poppins:wght@300;400;500;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand text-primary" href="#">Dapson store</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+    <!-- header -->
+    <nav class="navbar navbar-expand-lg bg-black py-3">
+        <div class="container-sm">
+          <a class="navbar-brand text-white fs-1" href="#">ARSHA</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title text-primary" id="offcanvasNavbarLabel">Dapson</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent ">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 ">
+              <li class="nav-item mx-2 ">
+                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">About</a>
+              </li>
+              <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Services</a>
+              </li>
+              <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Team</a>
+              </li>
+              <li class="nav-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu ">
+                  <li><a class="dropdown-item text-white" href="#">Action</a></li>
+                  <li><a class="dropdown-item text-white" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item text-white" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item mx-2">
+                <a class="nav-link text-white" href="#">Contact</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="Get Started">
+                <button type="button" class="btn btn-outline-primary rounded-pill text-white border border-2 border border-primary">Get Started</button>
+            </form>
+          </div>
+        </div>
+    </nav>
+   <!--main  -->
+   <main class="bg-primary">
+      <div class="container">
+        <div class="row row-cols-2">
+          <div class="col py-5">
+            <h1 class="display-2 fw-bolder big-text">Better Solutions For Your Business</h1>
+            <p class="fw-bolder">We are team of talented designers making websites with Bootstrap</p>
+            <button type="button" class="btn btn-outline-primary rounded-pill text-white border border-2 border border-primary bg-black">Get Started</button>
+        </div>
+          <div class="col py-5 px-5">
+            <img src="./img/bag.jpg" alt="" width="200px">
+          </div>
+        </div>
+      </div>
+      <!-- Sections -->
+    <section class="About Us">
+        <h1 class="text-center text-white py-3 fw-bolder big-text">ABOUT US</h1>
+        <div class="row px-5">
+          <div class="col-sm-6 mb-3 mb-sm-0">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit</p>
+              </div>
             </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Service</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="">About Us</a></li>
-                    <li>
-                      <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Contact</a></li>
-                  </ul>
-                </li>
-              </ul>
+          </div>
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text">Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
             </div>
           </div>
         </div>
-      </nav>
-      <main class="d-flex flex-column justify-content-center align-items-center py-5 bg">
-        <div class="text-center pt-5 mb-5">
-          <h1 class="display-4 fw-bolder big-text sec-text-col">Welcome to Dapson store</h1>
-          <p class="fs-4">We deals with anything you need</p>
-          <button class="btn sec-bg-col px-5 py-3 mt-4 text-white">Get Started</button>
-        </div>
-        <div class="container text-center mt-5">
-          <h3 class="fw-bolder small-text sec-text-col">SERVICES</h3>
-          <div class="row gx-5">
-            <div class="col-3">
-              <div class="col">
-                <div class="card mx-auto shadow
-                 py-3 border-0 text-start card-zoom">
-                 <div class="card-body">
-                      <i class="bi bi-stack fs-2 pri-text-col"></i>
-                        <h5 class="card-title my-4 sec-text-col">Shoes</h5>
-                        <img src="./img/shoe.jpg" alt="shoe" height="200px" width="200px">
-                        <p>At affordable price</p>
-                    </div>
-                </div>
-            </div>
-            </div>
-            <div class="col-3">
-              <div class="col">
-                <div class="card mx-auto shadow
-                 py-3 border-0 text-start card-zoom">
-                 <div class="card-body">
-                      <i class="bi bi-palette fs-2 pri-text-col"></i>
-                        <h5 class="card-title my-4 sec-text-col">Bags</h5>
-                        <img src="./img/bag.jpg" alt="bag" height="200px" width="200px">
-                        <p>At affordable price</p>
-                    </div>
-                </div>
-            </div>
-            </div>
-            <div class="col-3">
-              <div class="col">
-                <div class="card mx-auto shadow
-                 py-3 border-0 text-start card-zoom">
-                 <div class="card-body">
-                      <i class="bi bi-command fs-2 pri-text-col"></i>
-                        <h5 class="card-title my-4 sec-text-col">Clothes</h5>
-                        <img src="./img/cloth.jpg" alt="" height="200px" width="200px">
-                        <p>At affordable price</p>
-                    </div>
-                </div>
-            </div>
-            </div>
-            </div>
+    </section>
+    <section class="Services">
+      <h1 class="text-center text-white py-3 fw-bolder big-text">SERVICES</h1>
+      <p class="text-center px-5 text-black">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <div class="container text-center mt-5">
+        <div class="row gx-5">
+          <div class="col-3">
+            <div class="col">
+              <div class="card mx-auto shadow
+               py-3 border-0 text-start card-zoom">
+               <div class="card-body">
+                    <i class="bi bi-stack fs-2 pri-text-col"></i>
+                      <h5 class="card-title my-4 sec-text-col">Lorem Ipsum</h5>
+                      <p class="card-text text-secondary">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                  </div>
+              </div>
           </div>
-      </main>
-      
-        <div class="About Us py-4">
-          <h3 class="fw-bolder small-text sec-text-col text-center">ABOUT US</h3>
-          <blockquote class="blockquote mb-0 px-5">
-            <h4>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-          </blockquote>
+          </div>
+          <div class="col-3">
+            <div class="col">
+              <div class="card mx-auto shadow
+               py-3 border-0 text-start card-zoom">
+               <div class="card-body">
+                    <i class="bi bi-palette fs-2 pri-text-col"></i>
+                      <h5 class="card-title my-4 sec-text-col">Sed ut perpsi</h5>
+                      <p class="card-text text-secondary">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <div class="col-3">
+            <div class="col">
+              <div class="card mx-auto shadow
+               py-3 border-0 text-start card-zoom">
+               <div class="card-body">
+                    <i class="bi bi-command fs-2 pri-text-col"></i>
+                      <h5 class="card-title my-4 sec-text-col">Maggi Knorr</h5>
+                      <p class="card-text text-secondary">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                  </div>
+              </div>
+          </div>
+          </div>
+          <div class="col-3">
+            <div class="col">
+              <div class="card mx-auto shadow
+               py-3 border-0 text-start card-zoom">
+               <div class="card-body">
+                    <i class="bi bi-fingerprint fs-2 pri-text-col"></i>
+                      <h5 class="card-title my-4 sec-text-col">Memo</h5>
+                      <p class="card-text text-secondary">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                  </div>
+              </div>
+          </div>
+          </div>
         </div>
       </div>
-      <div class="contact">
-        <h3 class="fw-bolder small-text sec-text-col text-center">CONTACT</h3>
-        <h4 class="px-5">For more info contact us here!!!</h4>
-        <p class="px-5 fw-bolder">phone number: +23458965725</p>
-      </div>
-      <div class="card-footer bg-black border-success text-white py-3 text-center">
+    </section>
+    <section class="Contact">
+      <h1 class="text-center text-white py-3 fw-bolder big-text">CONTACT</h1>
+      <p class="text-center px-5 text-black">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+      <hr class="hr">
+      <address class="px-5 text-black">
+        Location: <br>
+        1123 Fictional St, Lagos<br>
+        <br>
+        Call: <br>
+        P: (123) 456-7890 <br>
+        <br>
+        Full Name <br>
+        info@example.com
+      </address>
+    </section>
+    <div class="card-footer bg-black border-success text-white py-3 text-center">
         © Copyright Dapson. All Rights Reserved
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
